test: add use case unit tests and setup drizzle/neon
Add unit tests for generate-insights, salvar-insights-manual,
salvar-relatorio-manual, and upload-report use cases.
Setup drizzle-orm with Neon serverless driver.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,31 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#4c5365",
-        "activityBar.background": "#4c5365",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#301019",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#4c5365",
-        "statusBar.background": "#363b48",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#4c5365",
-        "statusBarItem.remoteBackground": "#363b48",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#363b48",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#363b4899",
-        "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.debuggingBackground": "#484336",
-        "statusBar.debuggingForeground": "#e7e7e7",
-        "editorGroup.border": "#4c5365",
-        "panel.border": "#4c5365",
-        "sideBar.border": "#4c5365",
-        "statusBar.border": "#363b48",
-        "statusBar.debuggingBorder": "#484336",
-        "titleBar.border": "#363b48",
-        "tab.activeBorder": "#4c5365"
+        "activityBar.activeBackground": "#fef6f5",
+        "activityBar.background": "#fef6f5",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#fef6f5",
+        "statusBar.background": "#f7cac9",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#f09e9d",
+        "statusBarItem.remoteBackground": "#f7cac9",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#f7cac9",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#f7cac999",
+        "titleBar.inactiveForeground": "#15202b99",
+        "statusBar.debuggingBackground": "#c9f6f7",
+        "statusBar.debuggingForeground": "#15202b",
+        "editorGroup.border": "#fef6f5",
+        "sideBar.border": "#fef6f5",
+        "panel.border": "#fef6f5",
+        "statusBar.border": "#f7cac9",
+        "statusBar.debuggingBorder": "#c9f6f7",
+        "titleBar.border": "#f7cac9",
+        "tab.activeBorder": "#fef6f5",
+        "activityBarBadge.background": "#14cb29",
+        "activityBarBadge.foreground": "#15202b"
     },
-    "peacock.color": "#363B48"
+    "peacock.color": "#f7cac9"
 }
