--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "test:coverage": "vitest run --coverage",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "generate:icons": "node scripts/gerar-icones-pwa.mjs",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "prepare": "husky"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@neondatabase/serverless": "^1.0.2",
     "@neslinesli93/qpdf-wasm": "^0.3.0",
     "@radix-ui/react-label": "^2.1.8",
     "@vercel/blob": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.563.0",
     "next": "15.5.12",
     "next-auth": "^5.0.0-beta.30",
@@ -49,6 +55,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.4",
+    "@vitest/coverage-v8": "^4.0.18",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "15.5.12",
     "husky": "^9.1.7",
