feat: migrate storage from Vercel Blob/filesystem to PostgreSQL (Drizzle + Neon)
Replace file-based JSON storage with PostgreSQL using Drizzle ORM and Neon
serverless database. PDFs remain in Vercel Blob via new PdfStorage abstraction.

- Add DB repositories: DbReportRepository, DbConversaRepository
- Add PdfStorage interface with VercelBlob and Local implementations
- Migrate notificacoes, tarefas, analise-ativo to Drizzle queries
- Thread usuarioId through notification/task APIs for per-user isolation
- Add initial SQL migration (7 tables + enums)
- Update all API routes to pass authenticated userId
- Fix executor-tarefa-background tests for new usuarioId parameter

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 # ============================================
+# Banco de Dados (PostgreSQL via Neon)
+# ============================================
+# Obter em: https://console.neon.tech
+# Branch "main" para producao, branch "dev" para desenvolvimento
+DATABASE_URL="postgresql://neondb_owner:xxx@ep-xxx.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+# ============================================
 # Autenticacao (Google OAuth)
 # ============================================
 # Obter em: https://console.cloud.google.com/apis/credentials
@@ -11,13 +18,13 @@ GOOGLE_CLIENT_SECRET="GOCSPX-xxx"
 AUTH_SECRET="generate-with-openssl-rand-base64-32"
 
 # ============================================
-# Vercel Blob Storage
+# Vercel Blob Storage (apenas para PDFs)
 # ============================================
-# Auto-injetado na Vercel em producao. Opcional localmente.
+# Auto-injetado na Vercel em producao. Opcional localmente (PDFs usam filesystem em dev).
 BLOB_READ_WRITE_TOKEN="vercel_blob_xxx"
 
 # ============================================
-# Storage local (apenas desenvolvimento)
+# Storage local (apenas desenvolvimento, PDFs)
 # ============================================
 DATA_DIRECTORY="./data"
 
