--- a/.env.example
+++ b/.env.example
@@ -29,12 +29,7 @@ BLOB_READ_WRITE_TOKEN="vercel_blob_xxx"
 DATA_DIRECTORY="./data"
 
 # ============================================
-# AI Provider (claude ou gemini)
+# AI (Google Gemini)
 # ============================================
-AI_PROVIDER="gemini"
-
 # Obter em: https://aistudio.google.com/apikey
 GOOGLE_API_KEY="xxx"
-
-# Obter em: https://console.anthropic.com
-ANTHROPIC_API_KEY="xxx"
