--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "investimentos-app",
-  "version": "0.1.78",
+  "version": "0.1.79",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -33,7 +33,6 @@
     "next": "15.5.12",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^2.4.5",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
