fix: stop misclassifying Gemini rate limits as quota exhaustion
"Resource has been exhausted" is Gemini's standard 429 rate limit
message, not an indicator of permanent quota exhaustion. Removed
the /resource.*exhausted/ pattern from quota detection — only
explicit signals like "billing", "quota exceeded", or 402 now
trigger the "sem créditos" error. This was the root cause of the
chat falsely claiming the API key had no credits.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Dashboard pessoal de investimentos - Inter Prime",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0d0c14",
-  "theme_color": "#0d0c14",
+  "background_color": "#00030e",
+  "theme_color": "#00030e",
   "orientation": "portrait-primary",
   "icons": [
     {
